project structure detection, fix icons for actions